--- a/css.css.css
+++ b/css.css.css
@@ -32,6 +32,11 @@ label {
   width: 2.5em;
 }
 
+.chosen-container {
+  font-size: 1.3em;
+}
+
+select,
 input {
   font-size: 2em;
   padding: 5px;
@@ -41,6 +46,10 @@ input {
   border-bottom: 3px solid #eee;
   box-shadow: 0 0 10px #eee;
   font-family: "Raleway", sans-serif;
+}
+
+select {
+  overflow: hidden;
 }
 
 button {
@@ -67,4 +76,8 @@ button {
   margin: 0 auto;
   font-family: "Source+Code+Pro", monospace;
   font-size: 1em;
+}
+
+#add-more {
+  padding: 20px;
 }
